# eris-calibration

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
examples/: example_1.py  eye_in_hand.py  eye_to_hand.py  laser.py
include/eris/: laser_2d_solver.hpp  solver.hpp
modules/_eris/: __init__.py
modules/eris/: __init__.py  problem.py  solver.py
src/: laser_2d_solver.cpp  solver.cpp  wrapper.cpp
